--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
         crossorigin="anonymous"
       />
-      <link rel="stylesheet" type="text/css" href="/css/indexstyle.css">
+      <link rel="stylesheet" type="text/css" href="/css/style.css"/>
       <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -30,7 +30,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" id="title" href="index.html">SEAT BOOKER</a>
+      <a class="navbar-brand" id="title" href="/">SEAT BOOKER</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -58,7 +58,7 @@
             {{!-- <a class="nav-link" id="signup" href="/login">Login</a> --}}
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="cart" href="cart.html">Cart <i class="fa fa-shopping-cart"></i></a>
+            <a class="nav-link" id="cart" href="/cart">Cart <i class="fa fa-shopping-cart"></i></a>
           </li>
         </ul>
       </div>
