adding a timer to cart

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -61,9 +61,8 @@
 </div>
 {{/if}}
 
-{{#each tickets as |ticket|}}
-{{!-- console.log({{ticketData}}) --}}
-{{/each}}
+console.log({{format_time createdAt}})
+
 
 
 
