--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -5,8 +5,8 @@
     <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">Time Remaining</h5>
-    <p class="card-text"><b>Name: </b>{{name}}</p>
-    <p class="card-text"><b>Email: </b>{{email}}</p>
+    <div id="test">You cart expires in <span id="time">{{format_time createdAt}}:00</span> minutes!</div>
+    <br>
     <a href="#" class="card-link">Complete My Purchase</a>
   </div>
 </div>
@@ -61,13 +61,14 @@
 </div>
 {{/if}}
 
-console.log({{format_time createdAt}})
 
 
 
 
 <script src="./js/profile.js"></script>
 
+
+{{!-- Countdown Timer Function --}}
 <script>
 
   function startTimer(duration, display) {
@@ -90,13 +91,13 @@ console.log({{format_time createdAt}})
 
 
 window.onload = function () {
-    var fiveMinutes = 60 * 5,
+    var fiveMinutes = 60 * {{format_time createdAt}},
         display = document.querySelector('#time');
         
     startTimer(fiveMinutes, display);
 };
 </script>
 
-<body>
-    <div id="test">Registration closes in <span id="time">05:00</span> minutes!</div>
-</body>
+{{!-- <body>
+    <div id="test">You cart expires in <span id="time">{{format_time createdAt}}:00</span> minutes!</div>
+</body> --}}
