--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -5,7 +5,7 @@
     <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">Time Remaining</h5>
-    <div id="test">You cart expires in <span id="time">{{format_time createdAt}}:00</span> minutes!</div>
+    <div>You cart expires in <span id="cartTimer">{{set_time createdAt}}</span> minutes!</div>
     <br>
     <a href="#" class="card-link">Complete My Purchase</a>
   </div>
@@ -75,6 +75,23 @@
     var timer = duration, minutes, seconds;
     setInterval(function () {
         minutes = parseInt(timer / 60, 10);
+        seconds = parseInt(timer % 60, 10)-1;
+
+        minutes = minutes < 10 ? "0" + minutes : minutes;
+        seconds = seconds < 10 ? "0" + seconds : seconds;
+
+        display.textContent = minutes + ":" + seconds;
+
+        if (--timer < 0) {
+            timer = duration;
+            display.textContent = "00:00"
+        }
+    }, 1000);
+}
+
+  function setTimer(duration, display) {
+    var timer = duration, minutes, seconds;
+        minutes = parseInt(timer / 60, 10);
         seconds = parseInt(timer % 60, 10);
 
         minutes = minutes < 10 ? "0" + minutes : minutes;
@@ -84,20 +101,21 @@
 
         if (--timer < 0) {
             timer = duration;
+            display.textContent = "00:00"
         }
-    }, 1000);
 }
 
-
+window.onload = function () {
+    var time = {{format_time createdAt}},
+        display = document.querySelector('#cartTimer');
+        
+    setTimer(time, display);
+};
 
 window.onload = function () {
-    var fiveMinutes = 60 * {{format_time createdAt}},
-        display = document.querySelector('#time');
+    var time = {{format_time createdAt}},
+        display = document.querySelector('#cartTimer');
         
-    startTimer(fiveMinutes, display);
+    startTimer(time, display);
 };
 </script>
-
-{{!-- <body>
-    <div id="test">You cart expires in <span id="time">{{format_time createdAt}}:00</span> minutes!</div>
-</body> --}}
