--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,70 @@ footer {
     margin-bottom: 1.5rem;
   }
 
+  #productionInfo {
+    text-align: center;
+    color: white;
+    background-color: black;
+    line-height: 2;
+    /* font-weight: bold; */
+    font-size: 1rem;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+  }
+
+  a:hover {
+    text-decoration: none;
+  }
+
+  /* img {
+    display: block;
+    max-width:100%;
+    max-height:350px;
+    width: auto;
+    height: auto;
+  } */
+
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+
+
+
+
+
+
+
   /* TEST */
 
   @import url('https://fonts.googleapis.com/css?family=Oswald');
@@ -111,7 +175,7 @@ h1
   margin-bottom: 30px
 }
 
-.row{overflow: hidden}
+.row {overflow: hidden}
 
 .ticket
 {
