--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,18 +46,24 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-          {{#if logged_in}}
-            <a class="nav-link" href="/profile">Profile</a>
-          <li class="nav-item">
-            <a class="nav-link" href="/" id="logout">Logout</a>
+              <a class="nav-link" href="/" id="Shows">Shows</a>
           </li>
+          {{#if logged_in}}
+            <li class="nav-item active">
+              <a class="nav-link" href="/profile">Profile</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/" id="logout">Logout</a>
+            </li>
           {{else}}
-          <a class="nav-link" href="/login">Login</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="/login">Login</a>
+            </li>
           {{/if}}
 
             {{!-- <a class="nav-link" id="signup" href="/login">Login</a> --}}
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" id="cart" href="/cart">Cart <i class="fa fa-shopping-cart"></i></a>
           </li>
         </ul>
