--- a/views/production.handlebars
+++ b/views/production.handlebars
@@ -7,12 +7,9 @@
     {{!-- <h1>{{dataValues.title}}</h1> --}}
 
       <a href="">
-      <img src="{{dataValues.img}}">
+      <img src="{{dataValues.img}}" data-id="{{dataValues.id}}">
       <p id="productionInfo">{{dataValues.startDate}} - {{dataValues.endDate}}</p>
       </a>
   </div>
 {{/each}}
 </div>
-
-
-{{!-- width="100%" height="475" --}}
