--- a/views/showing.handlebars
+++ b/views/showing.handlebars
@@ -1,99 +1,21 @@
 <section class="container">
-<div class="row">
-  <div class="col-md-6">
-    <h1>Complete My Purhcase</h1>
-    <div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">Time Remaining</h5>
-    <div>You cart expires in <span id="cartTimer">{{set_time createdAt}}</span> minutes!</div>
-    <br>
-    <a href="#" class="card-link">Complete My Purchase</a>
-  </div>
-</div>
-</div>
-
-{{#if tickets.length}}
-
-  <div class="col-md-6">
-  <h1>Your Cart</h1>
-
-{{#each tickets as |ticket|}}
-{{#if ticket.in_cart}}
 
 <div class="row">
-    <article class="card ticket fl-left">
-      <section class="date">
-        <time datetime={{ticket.showing.time}}>
-          <span>{{ticket.showing.day}}</span><span>{{ticket.showing.month}}</span>
-        </time>
-      </section>
-      <section class="card-cont">
-        <small>SeatBooker Theaters Presents</small>
-        <h3>{{ticket.showing.production.title}}</h3>
-        <div class="even-date">
-         <i class="fa fa-calendar"></i>
-         <time>
-           <span>{{ticket.showing.date}}</span>
-           <span>{{ticket.showing.startTime}} to {{ticket.showing.endTime}}</span>
-         </time>
-        </div>
-      <div class="even-seat">
-          <i class="fa fa-star" style="padding-right: 15px"></i>
-          <span>Seat: {{ticket.seat.row}}{{ticket.seat.number}}</span>
-      </div>
-        <div class="even-info">
-          <i class="fa fa-map-marker"></i>
-          <p>
-            The Seatbooker Theater 9900 S Monroe St, Sandy, UT 84070
-          </p>
-        </div>
-        {{!-- <a href="#">tickets</a> --}}
-      </section>
-    </article>
-  </div>
-  {{/if}}
-  {{/each}}
-  
-  {{!-- End of ticket columns --}}
-  </div>
-  {{!-- End of main row--}}
-  </div> 
+{{!-- {{#each productionData.showings as |production|}}
+<p>{{id}}</p>
+{{/each}} --}}
+
+<p>{{get_array productionData}}</p>
+{{#each get_array}}
+
+<p>{{date}}</p>
+
+{{/each}}
+
 </div>
-{{/if}}
 
 
 
 
 
-<script src="./js/profile.js"></script>
 
-
-{{!-- Countdown Timer Function --}}
-<script>
-
-  function startTimer(duration, display) {
-    var timer = duration, minutes, seconds;
-    setInterval(function () {
-        minutes = parseInt(timer / 60, 10);
-        seconds = parseInt(timer % 60, 10)-1;
-
-        minutes = minutes < 10 ? "0" + minutes : minutes;
-        seconds = seconds < 10 ? "0" + seconds : seconds;
-
-        display.textContent = minutes + ":" + seconds;
-
-        if (--timer < 0) {
-            timer = duration;
-            display.textContent = "00:00"
-        }
-    }, 1000);
-}
-
-window.onload = function () {
-    var time = {{format_time createdAt}},
-        display = document.querySelector('#cartTimer');
-        
-    startTimer(time, display);
-};
-
-</script>
