--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
 #title {
   font-size: 1.8rem;
   color: rgba(223, 10, 10, 0.795);
-  font-family: cursive;
+	font-family: "Montserrat", sans-serif !important;
   font-weight: bold;
 }
 
