seating handlebars and js

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,6 +166,7 @@ body
   margin: 100px auto
 }
 
+
 h1
 {
   text-transform: uppercase;
@@ -395,3 +396,126 @@ h1
     font-size: 75%
   }
 }
+
+
+/* SEATING */
+
+
+.seat {
+  background-color: #444451;
+  height: 22px;
+  width: 25px;
+  margin: 3px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+  
+}
+
+.selected {
+  background-color: #0081cb;
+}
+
+.selected-display {
+  background-color: #0081cb;
+}
+
+.occupied {
+  background-color: #fff;
+}
+
+.seat:nth-of-type(2) {
+  margin-right: 18px;
+}
+
+.seat:nth-last-of-type(2) {
+  margin-left: 18px;
+}
+
+.seat:not(.occupied):hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.showcase .seat:not(.occupied):hover {
+  cursor: default;
+  transform: scale(1);
+}
+
+.showcase {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  background: rgba(0,0,0,0.1);
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: #777;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.showcase li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+}
+
+.showcase li small {
+  margin-left: 2px;
+}
+
+/* .row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
+.screen {
+  background: #fff;
+  height: 50px;
+  width: 50%;
+  margin: 15px 0;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  transform: rotateX(15deg);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p.seat-text {
+  margin: auto;
+  width: 50%;
+  /* padding: 10px; */
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+p.seat-text span {
+  color: #0081cb;
+  font-weight: 600;
+  box-sizing: content-box;
+}
+
+.credits a {
+  color: #fff;
+}
+
+
+.upper {
+  text-transform: uppercase;
+  font-weight: 600;
+  border-left: 10px solid #fec500;
+  padding-left: 10px;
+}
+
+.seat-selection {
+  width: 100%;
+}
+
+/* .seat-text {
+  margin-left: auto;
+  margin-right: auto;
+} */
