--- a/views/seat.handlebars
+++ b/views/seat.handlebars
@@ -4,7 +4,7 @@
   <div class="col-md-6">
     <div class="container">
 
-<h1>{{production.title}}</h1>
+<h1 class="showing-info" data-id="{{id}}" data-user="{{user}}">{{production.title}}</h1>
 <p class="upper"> {{date}}</p>
 
       <ul class="showcase">
@@ -24,64 +24,64 @@
 
       <div class="screen"></div>
         <div class="row justify-content-md-center">
-          <div id="1" class="seat" data-row="A" data-seat="1" data-price="$70.00"></div>
-          <div id="2" class="seat" data-row="A" data-seat="2" data-price="$70.00"></div>
-          <div id="3" class="seat" data-row="A" data-seat="3" data-price="$70.00"></div>
-          <div id="4" class="seat" data-row="A" data-seat="4" data-price="$70.00"></div>
-          <div id="5" class="seat" data-row="A" data-seat="5" data-price="$70.00"></div>
-          <div id="6" class="seat" data-row="A" data-seat="6" data-price="$70.00"></div>
-          <div id="7" class="seat" data-row="A" data-seat="7" data-price="$70.00"></div>
-          <div id="8" class="seat" data-row="A" data-seat="8" data-price="$70.00"></div>
+          <div id="1" class="seat" data-row="A" data-seat="1" data-price="70.00"></div>
+          <div id="2" class="seat" data-row="A" data-seat="2" data-price="70.00"></div>
+          <div id="3" class="seat" data-row="A" data-seat="3" data-price="70.00"></div>
+          <div id="4" class="seat" data-row="A" data-seat="4" data-price="70.00"></div>
+          <div id="5" class="seat" data-row="A" data-seat="5" data-price="70.00"></div>
+          <div id="6" class="seat" data-row="A" data-seat="6" data-price="70.00"></div>
+          <div id="7" class="seat" data-row="A" data-seat="7" data-price="70.00"></div>
+          <div id="8" class="seat" data-row="A" data-seat="8" data-price="70.00"></div>
         </div>
         <div class="row justify-content-md-center">
-          <div id="9" class="seat" data-row="B" data-seat="1" data-price="$65.00"></div>
-          <div id="10" class="seat" data-row="B" data-seat="2" data-price="$65.00"></div>
-          <div id="11" class="seat" data-row="B" data-seat="3" data-price="$65.00"></div>
-          <div id="12" class="seat" data-row="B" data-seat="4" data-price="$65.00"></div>
-          <div id="13" class="seat" data-row="B" data-seat="5" data-price="$65.00"></div>
-          <div id="14" class="seat" data-row="B" data-seat="6" data-price="$65.00"></div>
-          <div id="15" class="seat" data-row="B" data-seat="7" data-price="$65.00"></div>
-          <div id="16" class="seat" data-row="B" data-seat="8" data-price="$65.00"></div>
+          <div id="9" class="seat" data-row="B" data-seat="1" data-price="65.00"></div>
+          <div id="10" class="seat" data-row="B" data-seat="2" data-price="65.00"></div>
+          <div id="11" class="seat" data-row="B" data-seat="3" data-price="65.00"></div>
+          <div id="12" class="seat" data-row="B" data-seat="4" data-price="65.00"></div>
+          <div id="13" class="seat" data-row="B" data-seat="5" data-price="65.00"></div>
+          <div id="14" class="seat" data-row="B" data-seat="6" data-price="65.00"></div>
+          <div id="15" class="seat" data-row="B" data-seat="7" data-price="65.00"></div>
+          <div id="16" class="seat" data-row="B" data-seat="8" data-price="65.00"></div>
         </div>
         <div class="row justify-content-md-center">
-          <div id="17" class="seat" data-row="C" data-seat="1" data-price="$60.00"></div>
-          <div id="18" class="seat" data-row="C" data-seat="2" data-price="$60.00"></div>
-          <div id="19" class="seat" data-row="C" data-seat="3" data-price="$60.00"></div>
-          <div id="20" class="seat" data-row="C" data-seat="4" data-price="$60.00"></div>
-          <div id="21" class="seat" data-row="C" data-seat="5" data-price="$60.00"></div>
-          <div id="22" class="seat" data-row="C" data-seat="6" data-price="$60.00"></div>
-          <div id="23" class="seat" data-row="C" data-seat="7" data-price="$60.00"></div>
-          <div id="24" class="seat" data-row="C" data-seat="8" data-price="$60.00"></div>
+          <div id="17" class="seat" data-row="C" data-seat="1" data-price="60.00"></div>
+          <div id="18" class="seat" data-row="C" data-seat="2" data-price="60.00"></div>
+          <div id="19" class="seat" data-row="C" data-seat="3" data-price="60.00"></div>
+          <div id="20" class="seat" data-row="C" data-seat="4" data-price="60.00"></div>
+          <div id="21" class="seat" data-row="C" data-seat="5" data-price="60.00"></div>
+          <div id="22" class="seat" data-row="C" data-seat="6" data-price="60.00"></div>
+          <div id="23" class="seat" data-row="C" data-seat="7" data-price="60.00"></div>
+          <div id="24" class="seat" data-row="C" data-seat="8" data-price="60.00"></div>
         </div>
         <div class="row justify-content-md-center">
-          <div id="25" class="seat" data-row="D" data-seat="1" data-price="$55.00"></div>
-          <div id="26" class="seat" data-row="D" data-seat="2" data-price="$55.00"></div>
-          <div id="27" class="seat" data-row="D" data-seat="3" data-price="$55.00"></div>
-          <div id="28" class="seat" data-row="D" data-seat="4" data-price="$55.00"></div>
-          <div id="29" class="seat" data-row="D" data-seat="5" data-price="$55.00"></div>
-          <div id="30" class="seat" data-row="D" data-seat="6" data-price="$55.00"></div>
-          <div id="31" class="seat" data-row="D" data-seat="7" data-price="$55.00"></div>
-          <div id="32" class="seat" data-row="D" data-seat="8" data-price="$55.00"></div>
+          <div id="25" class="seat" data-row="D" data-seat="1" data-price="55.00"></div>
+          <div id="26" class="seat" data-row="D" data-seat="2" data-price="55.00"></div>
+          <div id="27" class="seat" data-row="D" data-seat="3" data-price="55.00"></div>
+          <div id="28" class="seat" data-row="D" data-seat="4" data-price="55.00"></div>
+          <div id="29" class="seat" data-row="D" data-seat="5" data-price="55.00"></div>
+          <div id="30" class="seat" data-row="D" data-seat="6" data-price="55.00"></div>
+          <div id="31" class="seat" data-row="D" data-seat="7" data-price="55.00"></div>
+          <div id="32" class="seat" data-row="D" data-seat="8" data-price="55.00"></div>
         </div>
         <div class="row justify-content-md-center">
-          <div id="33" class="seat" data-row="E" data-seat="1" data-price="$50.00"></div>
-          <div id="34" class="seat" data-row="E" data-seat="2" data-price="$50.00"></div>
-          <div id="35" class="seat" data-row="E" data-seat="3" data-price="$50.00"></div>
-          <div id="36" class="seat" data-row="E" data-seat="4" data-price="$50.00"></div>
-          <div id="37" class="seat" data-row="E" data-seat="5" data-price="$50.00"></div>
-          <div id="38" class="seat" data-row="E" data-seat="6" data-price="$50.00"></div>
-          <div id="39" class="seat" data-row="E" data-seat="7" data-price="$50.00"></div>
-          <div id="40" class="seat" data-row="E" data-seat="8" data-price="$50.00"></div>
+          <div id="33" class="seat" data-row="E" data-seat="1" data-price="50.00"></div>
+          <div id="34" class="seat" data-row="E" data-seat="2" data-price="50.00"></div>
+          <div id="35" class="seat" data-row="E" data-seat="3" data-price="50.00"></div>
+          <div id="36" class="seat" data-row="E" data-seat="4" data-price="50.00"></div>
+          <div id="37" class="seat" data-row="E" data-seat="5" data-price="50.00"></div>
+          <div id="38" class="seat" data-row="E" data-seat="6" data-price="50.00"></div>
+          <div id="39" class="seat" data-row="E" data-seat="7" data-price="50.00"></div>
+          <div id="40" class="seat" data-row="E" data-seat="8" data-price="50.00"></div>
         </div>
         <div class="row justify-content-md-center">
-          <div id="41" class="seat" data-row="F" data-seat="1" data-price="$45.00"></div>
-          <div id="42" class="seat" data-row="F" data-seat="2" data-price="$45.00"></div>
-          <div id="43" class="seat" data-row="F" data-seat="3" data-price="$45.00"></div>
-          <div id="44" class="seat" data-row="F" data-seat="4" data-price="$45.00"></div>
-          <div id="45" class="seat" data-row="F" data-seat="5" data-price="$45.00"></div>
-          <div id="46" class="seat" data-row="F" data-seat="6" data-price="$45.00"></div>
-          <div id="47" class="seat" data-row="F" data-seat="7" data-price="$45.00"></div>
-          <div id="48" class="seat" data-row="F" data-seat="8" data-price="$45.00"></div>
+          <div id="41" class="seat" data-row="F" data-seat="1" data-price="45.00"></div>
+          <div id="42" class="seat" data-row="F" data-seat="2" data-price="45.00"></div>
+          <div id="43" class="seat" data-row="F" data-seat="3" data-price="45.00"></div>
+          <div id="44" class="seat" data-row="F" data-seat="4" data-price="45.00"></div>
+          <div id="45" class="seat" data-row="F" data-seat="5" data-price="45.00"></div>
+          <div id="46" class="seat" data-row="F" data-seat="6" data-price="45.00"></div>
+          <div id="47" class="seat" data-row="F" data-seat="7" data-price="45.00"></div>
+          <div id="48" class="seat" data-row="F" data-seat="8" data-price="45.00"></div>
         </div>
       
       <br>
