--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,72 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SEAT BOOKER</title>
-      <link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-        crossorigin="anonymous"
-      />
-      <link rel="stylesheet" type="text/css" href="/css/style.css"/>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-      />
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-      />
-      <link rel="preconnect" href="https://fonts.gstatic.com" />
-      <link
-        href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Yellowtail&display=swap"
-        rel="stylesheet"
-      />
-      <script
-    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"
-  ></script>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SEAT BOOKER</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Yellowtail&display=swap" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+</head>
+
+<body>
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" id="title" href="/">SEAT BOOKER</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-          >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-              <a class="nav-link" href="/" id="Shows">Shows</a>
+            <a class="nav-link" href="/production" id="Shows">Shows</a>
           </li>
           {{#if logged_in}}
-            <li class="nav-item active">
-              <a class="nav-link" href="/profile">Profile</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/" id="logout">Logout</a>
-            </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/" id="logout">Logout</a>
+          </li>
           {{else}}
-            <li class="nav-item active">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
           {{/if}}
 
-            {{!-- <a class="nav-link" id="signup" href="/login">Login</a> --}}
+          {{!-- <a class="nav-link" id="signup" href="/login">Login</a> --}}
           </li>
           <li class="nav-item active">
             <a class="nav-link" id="cart" href="/cart">Cart <i class="fa fa-shopping-cart"></i></a>
@@ -75,11 +51,11 @@
       </div>
     </nav>
   </header>
-  
-    <main>
-     <!-- Render the sub layout -->
+
+  <main>
+    <!-- Render the sub layout -->
     {{{ body }}}
-    </main>
+  </main>
 
   <footer>
     <h2>
@@ -95,19 +71,12 @@
   <script src="/js/logout.js"></script>
   {{/if}}
 
-
-  
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> --}}
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"
-  ></script>
-  
-  </body>
+    crossorigin="anonymous"></script>
+
+
+</body>
 
 </html>
