--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,7 +15,7 @@
 {{#if tickets.length}}
 
   <div class="col-md-6">
-  <h1>Tickets</h1>
+  <h1>Your Tickets</h1>
 
 {{#each tickets as |ticket|}}
 {{#if ticket.purchased}}
@@ -39,7 +39,7 @@
         </div>
       <div class="even-seat">
           <i class="fa fa-star" style="padding-right: 15px"></i>
-          <span>Seat: {{ticket.seat.row}}{{ticket.seat.number}}</span>
+          <span>Seat: {{ticket.row}}{{ticket.number}}</span>
       </div>
         <div class="even-info">
           <i class="fa fa-map-marker"></i>
